--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
             <div class="text-h3">3 простых шага для получения денег</div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon1.png" class="image">
+                    <img src="img/icon1-v2.png" class="image">
                     <div class="text-h3 mt-30">Заполните заявку</div>
                 </div>
                 <div class="col">
                     <img src="img/arrow.png" style="margin-top:130px" class="image-a">
                 </div>
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon2.png" class="image">
+                    <img src="img/icon2-v2.png" class="image">
                     <div class="text-h3 mt-30">Дождитесь<br>одобрения заявки</div>
                 </div>
                 <div class="col">
                     <img src="img/arrow.png" style="margin-top:130px"class="image-a">
                 </div>
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon3.png" class="image">
+                    <img src="img/icon3-v2.png" class="image">
                     <div class="text-h3 mt-30">Получите деньги</div>
                 </div>
             </div>
@@ -90,17 +90,17 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">С любой кредитной историей</div>
-                    <img src="img/icon4.png" style="height: 110px">
+                    <img src="img/icon4-v2.png" style="height: 120px">
                     <div class="text-h4 mt-30">Получите деньги вне зависисти от вашей кредитной истории</div>
                 </div>
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">Без справок и поручителей</div>
-                    <img src="img/icon5.png" style="height: 110px">
+                    <img src="img/icon5-v2.png" style="height: 120px; margin-left:20px">
                     <div class="text-h4 mt-30">Минимум документов для заключения договора</div>
                 </div>
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">Без скрытых платежей</div>
-                    <img src="img/icon6.png" style="height: 110px">
+                    <img src="img/icon6-v2.png" style="height: 120px; margin-left:35px">
                     <div class="text-h4 mt-30">Прозрачные условия получения займа</div>
                 </div>
             </div>
@@ -115,15 +115,15 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
                     <img src="img/card1.png" class="w-100">
-                    <div class="text-h3 mb-30 card-title">С любой кредитной историей</div>
+                    <div class="text-h3 mb-30 card-title">Займы под залог автомобиля</div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
                     <img src="img/card2.png" class="w-100">
-                    <div class="text-h3 mb-30 card-title">Без справок и поручителей</div>
+                    <div class="text-h3 mb-30 card-title">Займы под залог ПТС</div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
                     <img src="img/card3.png" class="w-100">
-                    <div class="text-h3 mb-30 card-title">Без скрытых платежей</div>
+                    <div class="text-h3 mb-30 card-title">Займы под залог недвижимсоти</div>
                 </div>
             </div>
         </div>
@@ -169,7 +169,6 @@
         </div>
     </div>
     <script>
-
         /**
          * @return {boolean}
          */
