--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col logo">
-                    <img src="img/logo.png">
                     <div class="uppercase">Ваш инвестор</div>
                 </div>
                 <div class="col tel d-flex justify-content-end">
-                    <img src="img/icon-tel.png" class="">
+                    <img src="img/icon-tel.png" class="" alt="">
                     <div class="uppercase d-inline">+7 983 232 60 06</div>
                 </div>
             </div>
@@ -30,9 +29,9 @@
     <div class="container-fluid hero">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-md-6 col-lg-7 col-xl-8 color-white hero-text">
-                    <div class="text-h1">Заем денег с вашинвестор.рф — быстро и легко</div>
-                    <div class="text-h3">Заполните заявку и получите<br> деньги уже сегодня</div>
+                <div class="col-md-6 col-lg-7 color-white hero-text">
+                    <div class="text-h1">Частные займы — быстро и легко</div>
+                    <div class="text-h3 mt-30">Заполните заявку и получите<br> деньги уже сегодня</div>
                 </div>
                 <div class="col-md-6 col-lg-5 col-xl-4">
                     <div class="col hero-form">
@@ -54,28 +53,28 @@
         </div>
     </div>
 
-    <!-- Выдаем займы быстро -->
+    <!-- Выдаём займы быстро -->
     <div class="container-fluid">
         <div class="container py-120 text-center">
-            <div class="text-h2">Выдаем займы быстро</div>
-            <div class="text-h3">3 простых шага для получения денег</div>
+            <div class="text-h2">Выдаём займы быстро</div>
+            <div class="text-h3 mt-30">3 простых шага для получения денег</div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon1-v2.png" class="image">
+                    <img src="img/icon1.png" class="image" alt="">
                     <div class="text-h3 mt-30">Заполните заявку</div>
                 </div>
                 <div class="col">
-                    <img src="img/arrow.png" style="margin-top:130px" class="image-a">
+                    <img src="img/arrow.png" style="margin-top:130px" class="image-a" alt="">
                 </div>
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon2-v2.png" class="image">
+                    <img src="img/icon2.png" class="image" alt="">
                     <div class="text-h3 mt-30">Дождитесь<br>одобрения заявки</div>
                 </div>
                 <div class="col">
-                    <img src="img/arrow.png" style="margin-top:130px"class="image-a">
+                    <img src="img/arrow.png" style="margin-top:130px" class="image-a" alt="">
                 </div>
                 <div class="col-12 col-md-3 mt-60">
-                    <img src="img/icon3-v2.png" class="image">
+                    <img src="img/icon3.png" class="image" alt="">
                     <div class="text-h3 mt-30">Получите деньги</div>
                 </div>
             </div>
@@ -86,21 +85,21 @@
     <div class="container-fluid hero2">
         <div class="container py-120 text-center">
             <div class="text-h2 color-white">С нами выгодно</div>
-            <div class="text-h3 color-white">Заем денег без лишних формальностей</div>
+            <div class="text-h3 color-white mt-30">Заем денег без лишних формальностей</div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">С любой кредитной историей</div>
-                    <img src="img/icon4-v2.png" style="height: 120px">
-                    <div class="text-h4 mt-30">Получите деньги вне зависисти от вашей кредитной истории</div>
+                    <img src="img/icon4.png" style="height: 120px" alt="">
+                    <div class="text-h4 mt-30">Получите деньги вне зависимости от вашей кредитной истории</div>
                 </div>
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">Без справок и поручителей</div>
-                    <img src="img/icon5-v2.png" style="height: 120px; margin-left:20px">
+                    <img src="img/icon5.png" style="height: 120px; margin-left:20px" alt="">
                     <div class="text-h4 mt-30">Минимум документов для заключения договора</div>
                 </div>
                 <div class="col-12 col-md text-center hero2-card mt-60">
                     <div class="text-h3 mb-30">Без скрытых платежей</div>
-                    <img src="img/icon6-v2.png" style="height: 120px; margin-left:35px">
+                    <img src="img/icon6.png" style="height: 120px; margin-left:35px" alt="">
                     <div class="text-h4 mt-30">Прозрачные условия получения займа</div>
                 </div>
             </div>
@@ -111,19 +110,19 @@
     <div class="container-fluid">
         <div class="container py-120 text-center">
             <div class="text-h2">Наши услуги</div>
-            <div class="text-h3">Выдаем займы под залог недвижимости и автомобиля</div>
+            <div class="text-h3 mt-30">Выдаём займы под залог недвижимости и автомобиля</div>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
-                    <img src="img/card1.png" class="w-100">
+                    <img src="img/card1.png" class="w-100" alt="">
                     <div class="text-h3 mb-30 card-title">Займы под залог автомобиля</div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
-                    <img src="img/card2.png" class="w-100">
-                    <div class="text-h3 mb-30 card-title">Займы под залог ПТС</div>
+                    <img src="img/card2.png" class="w-100" alt="">
+                    <div class="text-h3 mb-30 card-title">Займы под залог<div class="dnone"></div> ПТС</div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-4 text-center mt-60">
-                    <img src="img/card3.png" class="w-100">
-                    <div class="text-h3 mb-30 card-title">Займы под залог недвижимсоти</div>
+                    <img src="img/card3.png" class="w-100" alt="">
+                    <div class="text-h3 mb-30 card-title">Займы под залог недвижимости</div>
                 </div>
             </div>
         </div>
@@ -136,12 +135,14 @@
             <div class="text-h3">Заполните заявку</div>
             <input type="text" placeholder="Имя" class="form-control btn-h mt-30" name="name" form="form2">
             <input type="tel" placeholder="Телефон" class="form-control btn-h mt-30" name="phone" form="form2">
-            <select class="form-control btn-h  mt-30" name="select">
-                <option disabled selected value="0">Вид залога</option>
-                <option value="1">Автомобиль</option>
-                <option value="2">ПТС</option>
-                <option value="3">Недвижимость</option>
-            </select>
+
+                <select class="form-control btn-h  mt-30" name="select">
+                    <option disabled selected value="0">Вид залога</option>
+                    <option value="1">Автомобиль</option>
+                    <option value="2">ПТС</option>
+                    <option value="3">Недвижимость</option>
+                </select>
+
             <input type="number" placeholder="Сумма займа" class="form-control btn-h mt-30" name="number" form="form2">
             <div class="custom-control custom-checkbox mt-4 text-left  mt-30">
                 <input type="checkbox" class="custom-control-input" id="Check2" name="check" form="form2">
@@ -157,11 +158,11 @@
     <div class="container-fluid footer py-60">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col">
+                <div class="col-12 col-sm">
                     <div class="text-h4 color-white">© 2018 Выдача займов «Ваш инвестор»</div>
                     <div class="text-h4 mt-30"><a href="#" class="color-white">Политика обработки персональных данных</a></div>
                 </div>
-                <div class="col justify-content-end text-right">
+                <div class="col-12 col-sm justify-content-end text-right">
                     <div class="text-h4 color-white">+7 983 232 60 06</div>
                     <div class="text-h4 mt-30"><a href="#" class="color-white">info@вашинвестор.ru</a></div>
                 </div>
@@ -179,7 +180,7 @@
                 alert('Заполните поле «Ваше имя»');
                 return false;}
             /* контактный телефон */
-            if(data.phone != null && data.phone.value.length == 0)
+            if(data.phone != null && data.phone.value.length === 0)
             {
                 alert('поле «Контактный телефон» пустое');
                 return false;}
@@ -198,6 +199,10 @@
                 return false;
             }
         }
+
+        /**
+         * @return {boolean}
+         */
         function Formdata2(data){
             /* если не заполнено поле Ваше имя, длина менее 3-x*/
             if (data.name != null && data.name.value.length < 3 )
@@ -205,7 +210,7 @@
                 alert('Заполните поле «Ваше имя»');
                 return false;}
             /* контактный телефон */
-            if(data.phone != null && data.phone.value.length == 0)
+            if(data.phone != null && data.phone.value.length === 0)
             {
                 alert('поле «Контактный телефон» пустое');
                 return false;}
