--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <div class="container-fluid head">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col logo">
+                <div class="col-5 logo">
                     <div class="uppercase">Ваш инвестор</div>
                 </div>
-                <div class="col tel d-flex justify-content-end">
-                    <img src="img/icon-tel.png" class="" alt="">
-                    <div class="uppercase d-inline">+7 983 232 60 06</div>
+                <div class="col tel justify-content-end">
+                    <div class="row uppercase w-100 justify-content-end" style="margin-bottom: 6px"><div class="col-12 text-right"> +7 (3822) 23-86-23</div></div>
+                    <div class="row uppercase w-100 justify-content-end"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Vector.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
+
                 </div>
             </div>
         </div>
@@ -163,7 +164,11 @@
                     <div class="text-h4 mt-30"><a href="#" class="color-white">Политика обработки персональных данных</a></div>
                 </div>
                 <div class="col-12 col-sm justify-content-end text-right">
-                    <div class="text-h4 color-white">+7 983 232 60 06</div>
+
+                        <div class="row uppercase w-100 justify-content-end color-white" style="margin-bottom: 6px"><div class="col-12 text-right"> +7 (3822) 23-86-23</div></div>
+                        <div class="row uppercase w-100 justify-content-end color-white"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Vector.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
+
+
                     <div class="text-h4 mt-30"><a href="#" class="color-white">info@вашинвестор.ru</a></div>
                 </div>
             </div>
