--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-5 logo">
+                    <img src="img/logo.png" alt="">
                     <div class="uppercase">Ваш инвестор</div>
                 </div>
                 <div class="col tel justify-content-end">
                     <div class="row uppercase w-100 justify-content-end" style="margin-bottom: 6px"><div class="col-12 text-right"> +7 (3822) 23-86-23</div></div>
-                    <div class="row uppercase w-100 justify-content-end"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Vector.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
-
+                    <div class="row uppercase w-100 justify-content-end"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Viber.png" class="qwe tel-img" alt=""><img src="img/Telegram.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                 <div class="col-12 col-sm justify-content-end text-right">
 
                         <div class="row uppercase w-100 justify-content-end color-white" style="margin-bottom: 6px"><div class="col-12 text-right"> +7 (3822) 23-86-23</div></div>
-                        <div class="row uppercase w-100 justify-content-end color-white"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Vector.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
+                        <div class="row uppercase w-100 justify-content-end color-white"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Viber.png" class="qwe tel-img" alt=""><img src="img/Telegram.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
 
 
                     <div class="text-h4 mt-30"><a href="#" class="color-white">info@вашинвестор.ru</a></div>
