--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                 </div>
                 <div class="col-12 col-sm justify-content-end text-right">
 
-                        <div class="row uppercase w-100 justify-content-end color-white" style="margin-bottom: 6px"><div class="col-12 text-right"> +7 (3822) 23-86-23</div></div>
-                        <div class="row uppercase w-100 justify-content-end color-white"><div class="col-12 text-right"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Viber.png" class="qwe tel-img" alt=""><img src="img/Telegram.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
+                        <div class="row uppercase w-100 justify-content-end color-white mx-0" style="margin-bottom: 6px"><div class="col-12 text-right p-0"> +7 (3822) 23-86-23</div></div>
+                        <div class="row uppercase w-100 justify-content-end color-white mx-0"><div class="col-12 text-right p-0"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Viber.png" class="qwe tel-img" alt=""><img src="img/Telegram.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
 
 
                     <div class="text-h4 mt-30"><a href="#" class="color-white">info@вашинвестор.ru</a></div>
