corrct and backend complete

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="row uppercase w-100 justify-content-end color-white mx-0"><div class="col-12 text-right p-0"> <img src="img/Whatsapp.png" class="qwe tel-img" alt=""><img src="img/Viber.png" class="qwe tel-img" alt=""><img src="img/Telegram.png" class="qwe tel-img" alt="">+7 909 543 86 23</div></div>
 
 
-                    <div class="text-h4 mt-30"><a href="#" class="color-white">info@вашинвестор.ru</a></div>
+                    <div class="text-h4 mt-30"><a href="#" class="color-white">tomskzaim@gmail.com</a></div>
                 </div>
             </div>
         </div>
